Comment thread on description page has broken layout Fixes #5165

--- a/webviews/editorWebview/index.css
+++ b/webviews/editorWebview/index.css
@@ -123,7 +123,7 @@ body .comment-container.review {
 	position: relative;
 }
 
-body .comment-container .review-comment-header:not(:last-child) {
+body #main > .comment-container > .review-comment-container > .review-comment-header:not(:nth-last-child(2)) {
 	border-bottom: 1px solid var(--vscode-editorHoverWidget-border);
 }
 
